--- a/index.html
+++ b/index.html
@@ -1,69 +1,164 @@
-<!DOCTYPE html><html lang="sv">
+<!DOCTYPE html>
+<html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>En tryggare väg</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>En tryggare väg</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-  <header>
-    <div class="header-content">
-      <h1>En tryggare väg</h1>
-      <img src="jag.jpg" alt="Profilbild" class="profile-pic">
-      <button class="lang-toggle" onclick="toggleLanguage()">English</button>
-    </div>
-    <p class="tagline" data-lang="sv">Samtalsstöd med trygghet och närvaro</p>
-    <p class="tagline" data-lang="en" style="display:none;">Counseling with safety and presence</p>
-  </header>  <section class="features">
-    <div class="feature">
-      <img src="icons/thinking.svg" alt="Grubblande ikon">
-      <h2 data-lang="sv">Ångesthantering</h2>
-      <h2 data-lang="en" style="display:none;">Anxiety Management</h2>
-      <p data-lang="sv">Lär dig hantera oro, ältande och tankefällor.</p>
-      <p data-lang="en" style="display:none;">Learn to manage worry, rumination, and thinking traps.</p>
-    </div>
-    <div class="feature">
-      <img src="icons/sad.svg" alt="Nedstämd ikon">
-      <h2 data-lang="sv">Depression</h2>
-      <h2 data-lang="en" style="display:none;">Depression</h2>
-      <p data-lang="sv">Få stöd att hitta riktning, energi och hopp.</p>
-      <p data-lang="en" style="display:none;">Get support to find direction, energy, and hope.</p>
-    </div>
-    <div class="feature">
-      <img src="icons/mentorship.svg" alt="Mentorskap ikon">
-      <h2 data-lang="sv">Coaching</h2>
-      <h2 data-lang="en" style="display:none;">Coaching</h2>
-      <p data-lang="sv">Utforska mål, mening och nästa steg i livet.</p>
-      <p data-lang="en" style="display:none;">Explore goals, meaning, and your next steps in life.</p>
-    </div>
-    <div class="feature">
-      <img src="icons/chat.svg" alt="Chatt ikon">
-      <h2 data-lang="sv">Samtalsstöd</h2>
-      <h2 data-lang="en" style="display:none;">Counseling</h2>
-      <p data-lang="sv">Någon att prata med när du behöver det.</p>
-      <p data-lang="en" style="display:none;">Someone to talk to when you need it.</p>
-    </div>
-  </section>  <section class="about">
-    <div class="about-container">
-      <img src="images/shield.png" alt="Sköldsymbol" class="shield">
-      <div class="about-text">
-        <h2 data-lang="sv">Om mig</h2>
-        <h2 data-lang="en" style="display:none;">About Me</h2>
-        <p data-lang="sv">
-          Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder.
-        </p>
-        <p data-lang="en" style="display:none;">
-          I offer counseling for those seeking to feel better, find direction, or get help with mental distress. With empathy and safety, we work together toward your goals – always using proven and evidence-based methods.
-        </p>
-      </div>
-    </div>
-  </section>  <script>
-    function toggleLanguage() {
-      const elements = document.querySelectorAll('[data-lang]');
-      elements.forEach(el => {
-        el.style.display = (el.style.display === 'none') ? '' : 'none';
-      });
-    }
-  </script></body>
+
+    <nav class="main-nav">
+        <a href="#home" class="nav-brand" data-text-sv="En tryggare väg" data-text-en="A Safer Path">En tryggare väg</a>
+        <div class="nav-links">
+            <a href="#services-section" data-text-sv="Tjänster" data-text-en="Services">Tjänster</a>
+            <a href="#about-section" data-text-sv="Om mig" data-text-en="About me">Om mig</a>
+            <a href="#contact-section" data-text-sv="Kontakt" data-text-en="Contact">Kontakt</a>
+        </div>
+        <button class="lang-toggle" onclick="toggleLanguage()">EN</button>
+        <button class="hamburger" aria-label="Toggle navigation">&#9776;</button>
+    </nav>
+
+    <header id="home" class="hero-section">
+        <div class="hero-content">
+            <h1 data-text-sv="En tryggare väg" data-text-en="A Safer Path">En tryggare väg</h1>
+            <p class="tagline" data-text-sv="Din partner för personlig utveckling och välmående." data-text-en="Your partner for personal development and well-being.">Din partner för personlig utveckling och välmående.</p>
+            <img src="jag.jpg" alt="Profilbild" class="profile-img">
+        </div>
+    </header>
+
+    <main>
+        <section id="services-section" class="content-section services-grid">
+            <h2 class="section-title" data-text-sv="Våra Tjänster" data-text-en="Our Services">Våra Tjänster</h2>
+            <div class="info-box">
+                <i class="fas fa-frown-open service-icon" aria-hidden="true"></i> <h3 data-text-sv="Ångesthantering" data-text-en="Anxiety Management">Ångesthantering</h3>
+                <p data-text-sv="Lär dig hantera oro, ältande och tankefällor." data-text-en="Learn to manage worry, rumination, and thought traps.">Lär dig hantera oro, ältande och tankefällor.</p>
+            </div>
+            <div class="info-box">
+                <i class="fas fa-cloud-rain service-icon" aria-hidden="true"></i> <h3 data-text-sv="Depression" data-text-en="Depression">Depression</h3>
+                <p data-text-sv="Få stöd att hitta riktning, energi och hopp." data-text-en="Get support to find direction, energy, and hope.">Få stöd att hitta riktning, energi och hopp.</p>
+            </div>
+            <div class="info-box">
+                <i class="fas fa-shield-alt service-icon" aria-hidden="true"></i> <h3 data-text-sv="Coaching" data-text-en="Coaching">Coaching</h3>
+                <p data-text-sv="Utforska mål, mening och nästa steg i livet." data-text-en="Explore goals, meaning, and the next steps in life.">Utforska mål, mening och nästa steg i livet.</p>
+            </div>
+            <div class="info-box">
+                <i class="fas fa-comments service-icon" aria-hidden="true"></i> <h3 data-text-sv="Samtalsstöd" data-text-en="Talk Support">Samtalsstöd</h3>
+                <p data-text-sv="Någon att prata med när du behöver det." data-text-en="Someone to talk to when you need it.">Någon att prata med när du behöver det.</p>
+            </div>
+        </section>
+
+        <section id="about-section" class="content-section about-me-layout">
+            <h2 class="section-title" data-text-sv="Om mig" data-text-en="About Me">Om mig</h2>
+            <div class="about-content-wrapper">
+                <div class="about-image-box">
+                    <img src="images/shield.png" alt="Sköldsymbol" class="shield-img">
+                    <img src="http://googleusercontent.com/image_generation_content/1" alt="Man som mediterar" class="meditation-image">
+                </div>
+                <div class="about-text-box">
+                    <p data-text-sv="Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder." data-text-en="I offer talk support for those who want to feel better, find direction, or get help with mental health issues. With empathy and security, we work together towards your goals – always with proven and evidence-based methods.">Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact-section" class="content-section contact-form-section">
+            <h2 class="section-title" data-text-sv="Kontakta mig" data-text-en="Contact Me">Kontakta mig</h2>
+            <form action="#" method="POST" class="contact-form">
+                <div class="form-group">
+                    <label for="name" data-text-sv="Namn:" data-text-en="Name:">Namn:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email" data-text-sv="E-post:" data-text-en="Email:">E-post:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message" data-text-sv="Meddelande:" data-text-en="Message:">Meddelande:</label>
+                    <textarea id="message" name="message" rows="6" required></textarea>
+                </div>
+                <button type="submit" data-text-sv="Skicka meddelande" data-text-en="Send Message">Skicka meddelande</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p data-text-sv="&copy; 2025 En tryggare väg. Alla rättigheter förbehållna." data-text-en="&copy; 2025 A Safer Path. All rights reserved.">&copy; 2025 En tryggare väg. Alla rättigheter förbehållna.</p>
+    </footer>
+
+    <script>
+        // Smooth scrolling for navigation links
+        document.querySelectorAll('nav a').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+                // Close mobile menu if open
+                if (document.querySelector('.main-nav').classList.contains('active')) {
+                    document.querySelector('.main-nav').classList.remove('active');
+                }
+            });
+        });
+
+        // Hamburger menu for mobile
+        document.querySelector('.hamburger').addEventListener('click', function() {
+            document.querySelector('.main-nav').classList.toggle('active');
+        });
+
+        // Language toggle functionality
+        function toggleLanguage() {
+            const html = document.documentElement;
+            const toggleButton = document.querySelector('.lang-toggle');
+
+            if (html.lang === 'sv') {
+                html.lang = 'en';
+                toggleButton.textContent = 'SV';
+                document.title = 'A Safer Path';
+                updateTexts('en');
+            } else {
+                html.lang = 'sv';
+                toggleButton.textContent = 'EN';
+                document.title = 'En tryggare väg';
+                updateTexts('sv');
+            }
+        }
+
+        function updateTexts(lang) {
+            document.querySelectorAll('[data-text-sv]').forEach(element => {
+                if (lang === 'sv') {
+                    if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
+                        // For form fields that might use placeholder
+                    } else {
+                        element.textContent = element.getAttribute('data-text-sv');
+                    }
+                } else {
+                    if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
+                        // For form fields that might use placeholder
+                    } else {
+                        element.textContent = element.getAttribute('data-text-en');
+                    }
+                }
+            });
+
+            // Specific updates for button texts
+            document.querySelector('button[type="submit"]').textContent = lang === 'sv' ? 'Skicka meddelande' : 'Send Message';
+            document.querySelector('.lang-toggle').textContent = lang === 'sv' ? 'EN' : 'SV';
+
+            // Specific updates for labels
+            document.querySelector('label[for="name"]').textContent = lang === 'sv' ? 'Namn:' : 'Name:';
+            document.querySelector('label[for="email"]').textContent = lang === 'sv' ? 'E-post:' : 'Email:';
+            document.querySelector('label[for="message"]').textContent = lang === 'sv' ? 'Meddelande:' : 'Message:';
+
+            // Handle the navigation links separately as they have inner HTML that needs to be updated directly
+            document.querySelector('a[href="#services-section"]').textContent = lang === 'sv' ? 'Tjänster' : 'Services';
+            document.querySelector('a[href="#about-section"]').textContent = lang === 'sv' ? 'Om mig' : 'About me';
+            document.querySelector('a[href="#contact-section"]').textContent = lang === 'sv' ? 'Kontakt' : 'Contact';
+
+            // Update the brand text in navigation as well
+            document.querySelector('.nav-brand').textContent = lang === 'sv' ? 'En tryggare väg' : 'A Safer Path';
+        }
+    </script>
+</body>
 </html>
