--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>En tryggare väg</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:wght@400;600;700;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -22,44 +22,38 @@
     </nav>
 
     <header id="home" class="hero-section">
-        <div class="hero-content">
+        <div class="header-top">
             <h1 data-text-sv="En tryggare väg" data-text-en="A Safer Path">En tryggare väg</h1>
-            <p class="tagline" data-text-sv="Din partner för personlig utveckling och välmående." data-text-en="Your partner for personal development and well-being.">Din partner för personlig utveckling och välmående.</p>
             <img src="jag.jpg" alt="Profilbild" class="profile-img">
         </div>
+        <p class="tagline" data-text-sv="Din partner för personlig utveckling och välmående." data-text-en="Your partner for personal development and well-being.">Din partner för personlig utveckling och välmående.</p>
     </header>
 
     <main>
         <section id="services-section" class="content-section services-grid">
             <h2 class="section-title" data-text-sv="Våra Tjänster" data-text-en="Our Services">Våra Tjänster</h2>
             <div class="info-box">
-                <i class="fas fa-frown-open service-icon" aria-hidden="true"></i> <h3 data-text-sv="Ångesthantering" data-text-en="Anxiety Management">Ångesthantering</h3>
+                <i class="fas fa-seedling service-icon" aria-hidden="true"></i> <h3 data-text-sv="Ångesthantering" data-text-en="Anxiety Management">Ångesthantering</h3>
                 <p data-text-sv="Lär dig hantera oro, ältande och tankefällor." data-text-en="Learn to manage worry, rumination, and thought traps.">Lär dig hantera oro, ältande och tankefällor.</p>
             </div>
             <div class="info-box">
-                <i class="fas fa-cloud-rain service-icon" aria-hidden="true"></i> <h3 data-text-sv="Depression" data-text-en="Depression">Depression</h3>
+                <i class="fas fa-sun service-icon" aria-hidden="true"></i> <h3 data-text-sv="Depression" data-text-en="Depression">Depression</h3>
                 <p data-text-sv="Få stöd att hitta riktning, energi och hopp." data-text-en="Get support to find direction, energy, and hope.">Få stöd att hitta riktning, energi och hopp.</p>
             </div>
             <div class="info-box">
-                <i class="fas fa-shield-alt service-icon" aria-hidden="true"></i> <h3 data-text-sv="Coaching" data-text-en="Coaching">Coaching</h3>
+                <i class="fas fa-arrow-alt-circle-up service-icon" aria-hidden="true"></i> <h3 data-text-sv="Coaching" data-text-en="Coaching">Coaching</h3>
                 <p data-text-sv="Utforska mål, mening och nästa steg i livet." data-text-en="Explore goals, meaning, and the next steps in life.">Utforska mål, mening och nästa steg i livet.</p>
             </div>
             <div class="info-box">
-                <i class="fas fa-comments service-icon" aria-hidden="true"></i> <h3 data-text-sv="Samtalsstöd" data-text-en="Talk Support">Samtalsstöd</h3>
+                <i class="fas fa-heart-chat service-icon" aria-hidden="true"></i> <h3 data-text-sv="Samtalsstöd" data-text-en="Talk Support">Samtalsstöd</h3>
                 <p data-text-sv="Någon att prata med när du behöver det." data-text-en="Someone to talk to when you need it.">Någon att prata med när du behöver det.</p>
             </div>
         </section>
 
-        <section id="about-section" class="content-section about-me-layout">
+        <section id="about-section" class="content-section about-me-container">
             <h2 class="section-title" data-text-sv="Om mig" data-text-en="About Me">Om mig</h2>
-            <div class="about-content-wrapper">
-                <div class="about-image-box">
-                    <img src="images/shield.png" alt="Sköldsymbol" class="shield-img">
-                    <img src="http://googleusercontent.com/image_generation_content/1" alt="Man som mediterar" class="meditation-image">
-                </div>
-                <div class="about-text-box">
-                    <p data-text-sv="Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder." data-text-en="I offer talk support for those who want to feel better, find direction, or get help with mental health issues. With empathy and security, we work together towards your goals – always with proven and evidence-based methods.">Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder.</p>
-                </div>
+            <div class="about-me-content-box">
+                <p data-text-sv="Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder." data-text-en="I offer talk support for those who want to feel better, find direction, or get help with mental health issues. With empathy and security, we work together towards your goals – always with proven and evidence-based methods.">Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder.</p>
             </div>
         </section>
 
@@ -92,9 +86,12 @@
         document.querySelectorAll('nav a').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
+                const targetId = this.getAttribute('href');
+                if (targetId.startsWith('#')) {
+                    document.querySelector(targetId).scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                }
                 // Close mobile menu if open
                 if (document.querySelector('.main-nav').classList.contains('active')) {
                     document.querySelector('.main-nav').classList.remove('active');
@@ -127,18 +124,10 @@
 
         function updateTexts(lang) {
             document.querySelectorAll('[data-text-sv]').forEach(element => {
-                if (lang === 'sv') {
-                    if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
-                        // For form fields that might use placeholder
-                    } else {
-                        element.textContent = element.getAttribute('data-text-sv');
-                    }
+                if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
+                    // For form fields that might use placeholder, not textContent
                 } else {
-                    if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
-                        // For form fields that might use placeholder
-                    } else {
-                        element.textContent = element.getAttribute('data-text-en');
-                    }
+                    element.textContent = element.getAttribute(lang === 'sv' ? 'data-text-sv' : 'data-text-en');
                 }
             });
 
@@ -150,14 +139,6 @@
             document.querySelector('label[for="name"]').textContent = lang === 'sv' ? 'Namn:' : 'Name:';
             document.querySelector('label[for="email"]').textContent = lang === 'sv' ? 'E-post:' : 'Email:';
             document.querySelector('label[for="message"]').textContent = lang === 'sv' ? 'Meddelande:' : 'Message:';
-
-            // Handle the navigation links separately as they have inner HTML that needs to be updated directly
-            document.querySelector('a[href="#services-section"]').textContent = lang === 'sv' ? 'Tjänster' : 'Services';
-            document.querySelector('a[href="#about-section"]').textContent = lang === 'sv' ? 'Om mig' : 'About me';
-            document.querySelector('a[href="#contact-section"]').textContent = lang === 'sv' ? 'Kontakt' : 'Contact';
-
-            // Update the brand text in navigation as well
-            document.querySelector('.nav-brand').textContent = lang === 'sv' ? 'En tryggare väg' : 'A Safer Path';
         }
     </script>
 </body>
