--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
         <section id="services-section" class="content-section services-grid">
             <h2 class="section-title" data-text-sv="Våra Tjänster" data-text-en="Our Services">Våra Tjänster</h2>
             <div class="info-box">
-                <i class="fas fa-seedling service-icon" aria-hidden="true"></i> <h3 data-text-sv="Ångesthantering" data-text-en="Anxiety Management">Ångesthantering</h3>
-                <p data-text-sv="Lär dig hantera oro, ältande och tankefällor." data-text-en="Learn to manage worry, rumination, and thought traps.">Lär dig hantera oro, ältande och tankefällor.</p>
+                <i class="fas fa-brain service-icon" aria-hidden="true"></i> <h3 data-text-sv="Ångesthantering" data-text-en="Anxiety Management">Ångesthantering</h3>
+                <p data-text-sv="Lär dig konkreta strategier för att effektivt hantera oro, stress och ångest. Vi utforskar tankemönster och utvecklar verktyg för ett lugnare sinne och ökad livskvalitet." data-text-en="Learn concrete strategies to effectively manage worry, stress, and anxiety. We explore thought patterns and develop tools for a calmer mind and improved quality of life.">Lär dig konkreta strategier för att effektivt hantera oro, stress och ångest. Vi utforskar tankemönster och utvecklar verktyg för ett lugnare sinne och ökad livskvalitet.</p>
             </div>
             <div class="info-box">
-                <i class="fas fa-sun service-icon" aria-hidden="true"></i> <h3 data-text-sv="Depression" data-text-en="Depression">Depression</h3>
-                <p data-text-sv="Få stöd att hitta riktning, energi och hopp." data-text-en="Get support to find direction, energy, and hope.">Få stöd att hitta riktning, energi och hopp.</p>
+                <i class="fas fa-cloud-showers-heavy service-icon" aria-hidden="true"></i> <h3 data-text-sv="Depression" data-text-en="Depression">Depression</h3>
+                <p data-text-sv="Få professionellt stöd att navigera genom nedstämdhet och depression. Tillsammans arbetar vi för att återfå energi, hitta glädje och skapa en meningsfull riktning framåt." data-text-en="Receive professional support to navigate through low mood and depression. Together, we work to regain energy, find joy, and create a meaningful path forward.">Få professionellt stöd att navigera genom nedstämdhet och depression. Tillsammans arbetar vi för att återfå energi, hitta glädje och skapa en meningsfull riktning framåt.</p>
             </div>
             <div class="info-box">
-                <i class="fas fa-arrow-alt-circle-up service-icon" aria-hidden="true"></i> <h3 data-text-sv="Coaching" data-text-en="Coaching">Coaching</h3>
-                <p data-text-sv="Utforska mål, mening och nästa steg i livet." data-text-en="Explore goals, meaning, and the next steps in life.">Utforska mål, mening och nästa steg i livet.</p>
+                <i class="fas fa-shield-alt service-icon" aria-hidden="true"></i> <h3 data-text-sv="Coaching" data-text-en="Coaching">Coaching</h3>
+                <p data-text-sv="Upptäck din fulla potential genom personlig coaching. Vi definierar tydliga mål, övervinner hinder och formulerar konkreta handlingsplaner för din professionella och personliga utveckling." data-text-en="Discover your full potential through personal coaching. We define clear goals, overcome obstacles, and formulate concrete action plans for your professional and personal development.">Upptäck din fulla potential genom personlig coaching. Vi definierar tydliga mål, övervinner hinder och formulerar konkreta handlingsplaner för din professionella och personliga utveckling.</p>
             </div>
             <div class="info-box">
-                <i class="fas fa-heart-chat service-icon" aria-hidden="true"></i> <h3 data-text-sv="Samtalsstöd" data-text-en="Talk Support">Samtalsstöd</h3>
-                <p data-text-sv="Någon att prata med när du behöver det." data-text-en="Someone to talk to when you need it.">Någon att prata med när du behöver det.</p>
+                <i class="fas fa-comments service-icon" aria-hidden="true"></i> <h3 data-text-sv="Samtalsstöd" data-text-en="Talk Support">Samtalsstöd</h3>
+                <p data-text-sv="Ett tryggt och konfidentiellt utrymme där du kan utforska tankar och känslor. Vi erbjuder empatiskt lyssnande och vägledning för att hantera livets utmaningar och stärka din inre balans." data-text-en="A safe and confidential space where you can explore thoughts and feelings. We offer empathetic listening and guidance to manage life's challenges and strengthen your inner balance.">Ett tryggt och konfidentiellt utrymme där du kan utforska tankar och känslor. Vi erbjuder empatiskt lyssnande och vägledning för att hantera livets utmaningar och stärka din inre balans.</p>
             </div>
         </section>
 
