--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
     </nav>
 
     <header id="home" class="hero-section">
-        <div class="header-top">
+        <div class="hero-content-overlay">
             <h1 data-text-sv="En tryggare väg" data-text-en="A Safer Path">En tryggare väg</h1>
-            <img src="jag.jpg" alt="Profilbild" class="profile-img">
+            <p class="tagline" data-text-sv="Din partner för personlig utveckling och välmående." data-text-en="Your partner for personal development and well-being.">Din partner för personlig utveckling och välmående.</p>
         </div>
-        <p class="tagline" data-text-sv="Din partner för personlig utveckling och välmående." data-text-en="Your partner for personal development and well-being.">Din partner för personlig utveckling och välmående.</p>
     </header>
 
     <main>
@@ -53,7 +52,7 @@
         <section id="about-section" class="content-section about-me-container">
             <h2 class="section-title" data-text-sv="Om mig" data-text-en="About Me">Om mig</h2>
             <div class="about-me-content-box">
-                <p data-text-sv="Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder." data-text-en="I offer talk support for those who want to feel better, find direction, or get help with mental health issues. With empathy and security, we work together towards your goals – always with proven and evidence-based methods.">Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder.</p>
+                <i class="fas fa-leaf about-icon" aria-hidden="true"></i> <p data-text-sv="Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder." data-text-en="I offer talk support for those who want to feel better, find direction, or get help with mental health issues. With empathy and security, we work together towards your goals – always with proven and evidence-based methods.">Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder.</p>
             </div>
         </section>
 
