--- a/index.html
+++ b/index.html
@@ -86,8 +86,13 @@
         </section>
         <section id="about-section" class="content-section about-me-container">
             <h2 class="section-title" data-text-sv="Om mig" data-text-en="About Me">Om mig</h2>
-            <div class="about-me-content-box">
-                <img src="ChatGPT Image 2 juni 2025 20_13_10.png" alt="Ikon av en sköld med ett hjärta i mitten, symboliserar empati och skydd." class="about-icon-img"> <p data-text-sv="Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder." data-text-en="I offer talk support for those who want to feel better, find direction, or get help with mental health issues. With empathy and security, we work together towards your goals – always with proven and evidence-based methods.">Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder.</p>
+            <div class="about-me-layout">
+                <div class="about-me-image-wrapper">
+                    <img src="ChatGPT Image 2 juni 2025 20_13_10.png" alt="Ikon av en sköld med ett hjärta i mitten, symboliserar empati och skydd." class="about-icon-img">
+                </div>
+                <div class="about-me-text-wrapper">
+                    <p data-text-sv="Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder." data-text-en="I offer talk support for those who want to feel better, find direction, or get help with mental health issues. With empathy and security, we work together towards your goals – always with proven and evidence-based methods.">Jag erbjuder samtalsstöd för dig som vill må bättre, hitta riktning eller få hjälp med psykisk ohälsa. Med empati och trygghet arbetar vi tillsammans mot dina mål – alltid med beprövade och evidensbaserade metoder.</p>
+                </div>
             </div>
         </section>
 
